--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
 	<link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/assets/css/slider.less">
 	<link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
 	<style>
+		/* *{
+			font-size: 13px !important;
+		} */
 		.css-1hb7zxy-IndicatorsContainer{
 			display: none !important;
 		}
@@ -100,9 +103,25 @@
 			z-index: 999999 !important;
 		}
 		.preloader{
-			/* z-index: 9999999 !important; */
+			z-index: 999999 !important;
+		}
+		/* .preloader{
 			z-index: -1 !important;
 			display: block !important;
+      		background: transparent !important;
+		}
+		.preloader p{
+			display: none !important;
+		} */
+		.modal.right.fade.in .modal-dialog .modal-content .modal-body ul.accomodation li, .modal.right.fade.in .modal-dialog .modal-content .modal-body .price ul li label, .modal.right.fade.in .modal-dialog .modal-content .modal-body .price ul li span{
+			font-size: 13px !important;
+			color: #848484 !important;
+		}
+		.modal.right.fade.in .modal-dialog .modal-content .modal-body .price{
+			border: 2px #848484 solid !important;
+		}
+		.modal.right.fade.in .modal-dialog .modal-content .modal-body .payment .btn-group-vertical .btn span:nth-last-child(1), .modal.right.fade.in .modal-dialog .modal-content .modal-body .price ul li span b, .modal.right.fade.in .modal-dialog .modal-content .modal-body .price ul li span small{
+			color: #848484 !important;
 		}
 	</style>
   </head>
