Some changes updated

--- a/public/index.html
+++ b/public/index.html
@@ -117,11 +117,14 @@
 			font-size: 13px !important;
 			color: #848484 !important;
 		}
-		.modal.right.fade.in .modal-dialog .modal-content .modal-body .price{
+		/* .modal.right.fade.in .modal-dialog .modal-content .modal-body .price{
 			border: 2px #848484 solid !important;
-		}
+		} */
 		.modal.right.fade.in .modal-dialog .modal-content .modal-body .payment .btn-group-vertical .btn span:nth-last-child(1), .modal.right.fade.in .modal-dialog .modal-content .modal-body .price ul li span b, .modal.right.fade.in .modal-dialog .modal-content .modal-body .price ul li span small{
 			color: #848484 !important;
+		}
+		.modal.right.fade.in .modal-dialog .modal-content .modal-body button.close span{
+			color: #ffffff !important;
 		}
 	</style>
   </head>
